# DeepLearning_ANN

./: README.md  classifier_app.py  pyproject.toml  regressor_app.py  requirements.txt
notebooks/: EDA.ipynb  ModelTraining_Classifier.ipynb  Preprocessing.ipynb
src/: custom_data.py  custom_keras_classifier.py  custom_keras_regressor.py  model_convertor.py  utils.py
src/components/: classifier_model_trainer.py  data_ingestion.py  data_transformation.py  regressor_model_trainer.py
src/configs/: configurations.py
src/pipelines/: predict_pipeline.py
